Adding working signup functionality and login template render

--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ channels = "*"
 gunicorn = "*"
 cryptography = "*"
 django-storages = "*"
+django-crispy-forms = "*"
 
 [dev-packages]
 pyyaml = "*"
